--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,7 +18,7 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="fede.tesi.mqttplantanalyzer.FirstFragment"
+        android:name="fede.tesi.mqttplantanalyzer.MyBluetoothActivity"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_first">
 
