--- a/app/src/main/res/layout/fragment_chart_list.xml
+++ b/app/src/main/res/layout/fragment_chart_list.xml
@@ -1,20 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+    <ListView
         android:id="@+id/chartList"
-        />
-
-    <Button
-        android:id="@+id/BtButton"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:text="BT"
-        app:layout_constraintTop_toBottomOf="@+id/chartList" />
+        android:layout_height="match_parent"
+        android:layout_weight="2"
+        android:cacheColorHint="#000000"
+        android:divider="@color/mint_green"
+        android:dividerHeight="1dp"
+        android:drawSelectorOnTop="false"
+        android:focusableInTouchMode="false"
+        android:footerDividersEnabled="true"
+        android:headerDividersEnabled="true"
+        android:paddingLeft="15dp"
+        android:paddingTop="30dp"
+        android:paddingRight="15dp"
+        android:textAlignment="textEnd"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
