--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -8,19 +8,12 @@
 
 
     <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/lineChart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/lineChart"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginVertical="50dp"/>
+        android:layout_marginVertical="50dp"
+        tools:layout_editor_absoluteX="20dp"
+        tools:layout_editor_absoluteY="50dp" />
 
-    <Button
-        android:id="@+id/button_second"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/previous"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/lineChart" />
 </androidx.constraintlayout.widget.ConstraintLayout>
