--- a/app/src/main/res/layout/loading.xml
+++ b/app/src/main/res/layout/loading.xml
@@ -22,7 +22,7 @@
         android:layout_width="150dp"
         android:layout_height="56dp"
         android:text=" Please Wait "
-        android:textSize="25sp"
+        android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
