--- a/app/src/main/res/layout/sensor_row.xml
+++ b/app/src/main/res/layout/sensor_row.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:text="Header"
-        android:textSize="24sp"
+        android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/send_icon"
         app:layout_constraintTop_toTopOf="parent" />
