--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -15,5 +15,11 @@
         android:layout_marginVertical="50dp"
         tools:layout_editor_absoluteX="20dp"
         tools:layout_editor_absoluteY="50dp" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="All Results"
+        app:layout_constraintTop_toBottomOf="@id/lineChart"
+        android:id="@+id/querybtn"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
